# eventric-stream

./: .gitignore  .gitmodules  CONSOLIDATION.md  Cargo.toml  README.md  REFACTOR.md  SECURITY.md  flake.nix  rust-toolchain.toml
benches/eventric-benches/: Cargo.toml
benches/eventric-benches/benches/: append.rs  select.rs
benches/eventric-core-benches/: Cargo.toml
benches/eventric-core-benches/benches/: append.rs
benches/eventric-stream-benches/: Cargo.toml
benches/eventric-stream-benches/benches/: append.rs
crates/eventric/: Cargo.toml
crates/eventric-core/: Cargo.toml  README.md
crates/eventric-core-error/: Cargo.toml
crates/eventric-core-error/src/: lib.rs
crates/eventric-core-event/: Cargo.toml
crates/eventric-core-event/src/: data.rs  identifier.rs  lib.rs  position.rs  specifier.rs  tag.rs  timestamp.rs  version.rs
crates/eventric-core-model/: Cargo.toml
crates/eventric-core-model/src/: append.rs  common.rs  descriptor.rs  event.rs  identifier.rs  lib.rs  query.rs  specifier.rs  stream.rs  tag.rs
crates/eventric-core-model/src/event/: append.rs  data.rs  descriptor.rs  identifier.rs  insertion.rs  position.rs  query.rs  retrieval.rs  tag.rs  timestamp.rs  version.rs
crates/eventric-core-model/src/query/: specifier.rs
crates/eventric-core-persistence/: Cargo.toml
crates/eventric-core-persistence-data/: Cargo.toml
crates/eventric-core-persistence-data/src/: configuration.rs  lib.rs  operation.rs
crates/eventric-core-persistence-data/src/operation/: event.rs
crates/eventric-core-persistence-index/: Cargo.toml
crates/eventric-core-persistence-index/src/: configuration.rs  iter.rs  lib.rs  operation.rs
crates/eventric-core-persistence-index/src/operation/: descriptor.rs  tags.rs
crates/eventric-core-persistence-reference/: Cargo.toml
crates/eventric-core-persistence-reference/src/: configuration.rs  lib.rs  operation.rs
crates/eventric-core-persistence-reference/src/operation/: descriptor.rs  tags.rs
crates/eventric-core-persistence/src/: context.rs  lib.rs  model.rs  state.rs
crates/eventric-core-persistence/src/model/: event.rs  query.rs
crates/eventric-core-reference/: Cargo.toml
crates/eventric-core-reference/src/: configuration.rs  lib.rs  operation.rs
crates/eventric-core-reference/src/operation/: descriptor.rs  tags.rs
crates/eventric-core-state/: Cargo.toml
crates/eventric-core-state/src/: context.rs  io.rs  lib.rs
crates/eventric-core-stream/: Cargo.toml
crates/eventric-core-stream/src/: append.rs  condition.rs  data.rs  event.rs  lib.rs  query.rs  stream.rs
crates/eventric-core-stream/src/append/: condition.rs
crates/eventric-core-stream/src/data/: events.rs  indices.rs  references.rs
crates/eventric-core-stream/src/query/: cache.rs  condition.rs  iter.rs
crates/eventric-core-stream/src/stream/: append.rs  properties.rs  query.rs
crates/eventric-core-utils/: Cargo.toml
crates/eventric-core-utils/src/: hashing.rs  iteration.rs  lib.rs  validation.rs
crates/eventric-core-utils/src/iteration/: and.rs  or.rs
crates/eventric-core-utils/src/validation/: string.rs  vec.rs
crates/eventric-core/src/: data.rs  error.rs  event.rs  lib.rs  model.rs  persistence.rs  stream.rs  util.rs  utility.rs  utils.rs
crates/eventric-core/src/data/: events.rs  indices.rs  references.rs
crates/eventric-core/src/event/: data.rs  identifier.rs  position.rs  specifier.rs  tag.rs  timestamp.rs  version.rs
crates/eventric-core/src/model/: event.rs  query.rs  stream.rs
crates/eventric-core/src/persistence/: data.rs  index.rs  model.rs  operation.rs  reference.rs
crates/eventric-core/src/stream/: append.rs  condition.rs  data.rs  query.rs
crates/eventric-core/src/util/: iter.rs  iteration.rs  validate.rs  validation.rs
crates/eventric-core/src/utility/: iter.rs
crates/eventric-core/src/utils/: iteration.rs  validation.rs
crates/eventric-core/tests/: properties.rs  query.rs
crates/eventric-core/tests/util/: mod.rs
crates/eventric-model/: Cargo.toml
crates/eventric-model/src/: action.rs  event.rs  lib.rs  projection.rs  reaction.rs
crates/eventric-model/tests/: projection_paths.rs  tags.rs  ui.rs  versioning.rs
crates/eventric-runtime/: Cargo.toml
crates/eventric-runtime/src/: enactor.rs  lib.rs  reactor.rs
crates/eventric-runtime/tests/: command.rs  enact.rs  multi_selector.rs  react.rs
crates/eventric-stream/: Cargo.toml  README.md
crates/eventric-stream-core/: Cargo.toml
crates/eventric-stream-core/src/: error.rs  event.rs  lib.rs  macros.rs  stream.rs  utils.rs
crates/eventric-stream-core/tests/: properties.rs  query.rs
crates/eventric-stream-macros/: Cargo.toml
crates/eventric-stream-macros/src/: lib.rs
crates/eventric-stream-multi-thread/: Cargo.toml
crates/eventric-stream-multi-thread/src/: lib.rs  owner.rs  processor.rs  proxy.rs
crates/eventric-stream-multi-thread/tests/: concurrency.rs
crates/eventric-stream-server/: Cargo.toml
crates/eventric-stream-server/src/: client.rs  lib.rs  processor.rs  server.rs
crates/eventric-stream/src/: combine.rs  error.rs  event.rs  iter.rs  lib.rs  stream.rs  utils.rs
crates/eventric-stream/tests/: append.rs  append_query.rs  concurrency.rs  iterate.rs  iterate_query.rs  properties.rs  query.rs  round_trip.rs
crates/eventric/src/: combine.rs  error.rs  event.rs  lib.rs  model.rs  stream.rs
crates/eventric/tests/: concurrency.rs  enact.rs  multi_selector.rs  round_trip.rs  versioning.rs
crates/model/: Cargo.toml
crates/model/core/: Cargo.toml
crates/model/src/: lib.rs
crates/model/tests/: enact.rs  multi_selector.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  validation.rs
ex/eventric-core-data/: Cargo.toml
ex/eventric-core-data/src/: configuration.rs  data.rs  lib.rs
ex/eventric-core-util/: Cargo.toml
ex/eventric-core-util/src/: iter.rs  lib.rs
examples/eventric-core-examples/: Cargo.toml
examples/eventric-core-examples/examples/: stream.rs
examples/eventric-core-profiling-examples/: Cargo.toml
examples/eventric-core-profiling-examples/examples/: multiple_append.rs  single_append.rs
(+372 files in other folders)
