[profile.bench]
debug = true

[profile.release]
debug = true

[workspace]
members  = ["benches/*", "crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
assertables           = { version = "9" }
bytes                 = { version = "1" }
criterion             = { version = "0.7" }
dashmap               = { version = "6", features = ["inline"] }
derive_more           = { version = "2", features = ["full"] }
double-ended-peekable = { version = "0.1.0" }
eventric-core         = { path = "crates/eventric-core" }
fancy_constructor     = { version = "2" }
fjall                 = { version = "=3.0.0-pre.3" }
include-utils         = { version = "0.2" }
rapidhash             = { version = "4" }
thiserror             = { version = "2" }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["data-structures"]
edition    = "2024"
keywords   = ["event", "sourcing", "streaming"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/eventrica/eventric-core"
version    = "0.1.0"
