[[bench]]
harness = false
name    = "append"

[dependencies]

[dev-dependencies]
criterion.workspace     = true
eventric-core.workspace = true

[lib]
bench = false

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Benches"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-benches"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
