[[bench]]
harness = false
name    = "append"

[dependencies]

[dev-dependencies]
criterion.workspace       = true
eventric-stream.workspace = true

[lib]
bench = false

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Stream Benches"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-stream-benches"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
