[dependencies]
fjall.workspace         = true
include-utils.workspace = true
thiserror.workspace     = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Error"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-error"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
