[dependencies]
derive_more.workspace         = true
eventric-core-error.workspace = true
eventric-core-utils.workspace = true
fancy_constructor.workspace   = true
include-utils.workspace       = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Event"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-event"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
