[dependencies]
derive_more.workspace       = true
fancy_constructor.workspace = true
itertools.workspace         = true
jiff.workspace              = true
rapidhash.workspace         = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Model"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-model"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
