[dependencies]
bytes.workspace                     = true
eventric-core-model.workspace       = true
eventric-core-persistence.workspace = true
fjall.workspace                     = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Persistence Data"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-persistence-data"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
