[dependencies]
bytes.workspace                     = true
derive_more.workspace               = true
eventric-core-model.workspace       = true
eventric-core-persistence.workspace = true
eventric-core-state.workspace       = true
eventric-core-util.workspace        = true
fjall.workspace                     = true
self_cell.workspace                 = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Persistence Index"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-persistence-index"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
