[dependencies]
bytes.workspace                     = true
eventric-core-persistence.workspace = true
eventric-core-state.workspace       = true
fjall.workspace                     = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Persistence Reference"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-persistence-reference"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
