[dependencies]
derive_more.workspace         = true
eventric-core-model.workspace = true
fancy_constructor.workspace   = true
fjall.workspace               = true
rapidhash.workspace           = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Persistence"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-persistence"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
