[dependencies]
bytes.workspace               = true
eventric-core-model.workspace = true
fjall.workspace               = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Reference"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-reference"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
