[dependencies]
eventric-core-model.workspace                 = true
eventric-core-persistence.workspace           = true
eventric-core-persistence-data.workspace      = true
eventric-core-persistence-index.workspace     = true
eventric-core-persistence-reference.workspace = true
eventric-core-state.workspace                 = true
eventric-core-util.workspace                  = true
fancy_constructor.workspace                   = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Stream"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-stream"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
