[dependencies]
dashmap.workspace                 = true
derive_more.workspace             = true
eventric-core-data.workspace      = true
eventric-core-index.workspace     = true
eventric-core-model.workspace     = true
eventric-core-reference.workspace = true
fancy_constructor.workspace       = true
fjall.workspace                   = true
itertools.workspace               = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Stream"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-stream"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
