[dependencies]
bytes.workspace               = true
dashmap.workspace             = true
derive_more.workspace         = true
eventric-core-error.workspace = true
eventric-core-event.workspace = true
eventric-core-utils.workspace = true
fancy_constructor.workspace   = true
fjall.workspace               = true
include-utils.workspace       = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Stream"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-stream"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
