[dependencies]
derive_more.workspace         = true
eventric-core-error.workspace = true
fancy_constructor.workspace   = true
include-utils.workspace       = true
rapidhash.workspace           = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Utilities"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-utils"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
