[dependencies]
eventric-core-error.workspace  = true
eventric-core-event.workspace  = true
eventric-core-stream.workspace = true
eventric-core-utils.workspace  = true
include-utils.workspace        = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
