[dependencies]
bytes.workspace                 = true
dashmap.workspace               = true
derive_more.workspace           = true
double-ended-peekable.workspace = true
fancy_constructor.workspace     = true
fjall.workspace                 = true
include-utils.workspace         = true
rand.workspace                  = true
rapidhash.workspace             = true
thiserror.workspace             = true

[dev-dependencies]
assertables.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
