[dependencies]
error-stack.workspace     = true
eventric-model.workspace  = true
eventric-stream.workspace = true

[dev-dependencies]
assertables.workspace       = true
derive_more.workspace       = true
fancy_constructor.workspace = true
revision.workspace          = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Runtime"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-runtime"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
