[dependencies]
eventric-stream-core.workspace = true
syn.workspace                  = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Stream Macros"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-stream-macros"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
