[dependencies]
eventric-stream-core.workspace   = true
eventric-stream-macros.workspace = true
include-utils.workspace          = true

[dev-dependencies]
assertables.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Stream"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-stream"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
