[dependencies]
bytes.workspace                 = true
crossbeam.workspace             = true
derive_more.workspace           = true
double-ended-peekable.workspace = true
error-stack.workspace           = true
eventric-macros.workspace       = true
fancy_constructor.workspace     = true
fjall.workspace                 = true
oneshot.workspace               = true
pastey.workspace                = true
rand.workspace                  = true
rapidhash.workspace             = true
smallvec.workspace              = true

[dev-dependencies]
assertables.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Stream"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-stream"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
