[dependencies]
eventric-model-core.workspace   = true
eventric-model-macros.workspace = true

[dev-dependencies]
derive_more.workspace       = true
error-stack.workspace       = true
eventric-stream.workspace   = true
fancy_constructor.workspace = true
revision.workspace          = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Model"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-model"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
