[dependencies]
thiserror.workspace = true

[dev-dependencies]
assertables.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Utilities"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-utils"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
