[dependencies]
bytes.workspace               = true
derive_more.workspace         = true
eventric-core-model.workspace = true
fancy_constructor.workspace   = true
fjall.workspace               = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Data"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-data"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
