[dependencies]
derive_more.workspace       = true
fancy_constructor.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Utilities"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-util"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
