[dependencies]
eventric-core.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Eventric Core Examples"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "eventric-core-examples"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
